--- a/style.css
+++ b/style.css
@@ -6,12 +6,89 @@ body {
   width: 100%;
   height: 100%;
   display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  justify-items: center;
+  background-image: url(images/gameBackground.jpg);
+}
+#leftSide {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-column: 1;
+  justify-items: center;
+}
+#rightSide {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-column: 3;
+  justify-items: center;
+}
+#player1Display {
+  grid-row: 2 / 4;
+  margin-left: 1%;
+  margin-bottom: 10%;
+}
+#player2Display {
+  grid-row: 2 / 4;
+  margin-right: 1%;
+  margin-bottom: 10%;
+}
+#player1Display,
+#player2Display {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  background-color: lightblue;
+  flex-grow: 2;
+  width: 80%;
+  max-height: 40%;
+  border: solid;
+  border-color: darkslategray;
+  text-align: center;
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 700;
+  padding: 2%;
+}
+#start,
+#restart {
+  background-color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  max-width: 500px;
+  max-height: 50px;
+  width: clamp(200px, 2);
+  border: none;
+  border-radius: 4px;
+  grid-row: 4 / 5;
+}
+#content {
+  flex-grow: 1;
+  width: 98%;
+  height: 98%;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  justify-items: center;
+  grid-column: 2;
+}
+#gameBoard {
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  grid-row: 2 / 4;
+  background-color: darkslategray;
+  width: 30vw;
+  height: 40vh;
+  border: solid;
+  padding: 1%;
 }
 .board {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 98%;
+  height: 98%;
   max-width: 350px;
   max-height: 350px;
+  background-color: lightblue;
+  color: white;
+  font-size: 4rem;
 }
